fixed horizontal overflow in winners page

--- a/capstone-showcase/src/CSS/Winners.css
+++ b/capstone-showcase/src/CSS/Winners.css
@@ -1,3 +1,8 @@
+body 
+{
+    font-family: Arial, sans-serif;
+
+}
 .winners__form-container {
   background-color: white;
   display: flex;
